<resources>
    <string name="app_name">Peruibe Melhor</string>
    <string name="sobre_nome">Sobre nome</string>
    <string name="senha">senha</string>
    <string name="login">login</string>
    <string name="aviso_login">e-mail</string>
    <string name="bt_login">login</string>
    <string name="bt_cadastro">cadastrar</string>
    <string name="preenche_cadastro">Preenche seus dados para cadastro</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cpf">CFF</string>
    <string name="masculino">M</string>
    <string name="feminino">F</string>
    <string name="outros">Outros</string>
    <string name="genero">Genero:</string>
    <string name="email">email</string>
    <string name="telefone">Telefone</string>
    <string name="profissao">Profissão</string>
    <string name="escolaridade">Escolaridade</string>
    <string name="pr_ximo">Próximo</string>
    <string name="estado">Estado</string>
    <string name="Complemento">complemento</string>
    <string name="cidade">Cidade</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cep">CEP</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="salvar">Salvar</string>
    <string name="nome_pasta">Nome</string>
    <string name="discusao">Discusao</string>
    <string name="descricao">Descrição</string>
    <string name="nova_pasta">Nova Pasta</string>
    <string name="login_invalido">Login Inválido</string>
    <string name="campos_vazios">campos vazios!</string>

    <string-array name="categorias_array">
        <item>Selecione uma categoria</item>
        <item>Saúde</item>
        <item>Infraestrutura</item>
    </string-array>
</resources>